cleaning house a bit

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -78,3 +78,12 @@ tr .cRow {
   padding-bottom:0px!important;
 }
 
+
+.dropdown-content li>a, .dropdown-content li>span {
+    font-size: 16px;
+    color: #26a69a;
+    display: block;
+    line-height: 22px;
+    padding: 14px 16px;
+    width: 100%!important;
+}
